// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should match snapshot 1`] = `
<div>
  <button
    class="css-a6m9ce-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when active 1`] = `
<div>
  <button
    class="css-swclvn-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when disabled 1`] = `
<div>
  <button
    class="css-of112l-Button"
    disabled=""
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when full width 1`] = `
<div>
  <button
    class="css-1g77thg-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when href prop is defined 1`] = `
<div>
  <a
    class="css-143r00j-Button"
    href="https://www.google.com.au"
  >
    <button
      class="css-1dvp56l-Button"
      type="button"
    >
      <span>
        test
      </span>
    </button>
  </a>
</div>
`;

exports[`Button component should match snapshot when href prop is defined and isActive 1`] = `
<div>
  <a
    class="css-143r00j-Button"
    href="https://www.google.com.au"
  >
    <button
      class="css-cmx7tk-Button"
      type="button"
    >
      <span>
        test
      </span>
    </button>
  </a>
</div>
`;

exports[`Button component should match snapshot when icon is not string 1`] = `
<div>
  <button
    class="css-uew3mp-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided 1`] = `
<div>
  <button
    class="css-uew3mp-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided 2`] = `
<div>
  <button
    class="css-r17118-Button"
    type="button"
  >
    <span
      class="css-1geq0g0"
    >
      <i
        class="material-icons  css-14lartn-Icon"
      >
        accessibility
      </i>
    </span>
    <span />
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided and renderPosition left 1`] = `
<div>
  <button
    class="css-uew3mp-Button"
    type="button"
  >
    <span
      class="css-1gfetx6"
    >
      <i
        class="material-icons  css-18og482-Icon"
      >
        accessibility
      </i>
    </span>
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when icon is provided and renderPosition right 1`] = `
<div>
  <button
    class="css-uew3mp-Button"
    type="button"
  >
    <span>
      test
    </span>
    <span
      class="css-bq4wcj"
    >
      <i
        class="material-icons  css-18og482-Icon"
      >
        accessibility
      </i>
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when isCircle and size is sm 1`] = `
<div>
  <button
    class="css-er6xi5-Button"
    type="button"
  >
    <span>
      CJ
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when isCircle is true 1`] = `
<div>
  <button
    class="css-r17118-Button"
    type="button"
  >
    <span />
  </button>
</div>
`;

exports[`Button component should match snapshot when isIcon and size is large 1`] = `
<div>
  <button
    class="css-11bejsf-Button"
    type="button"
  >
    <span />
  </button>
</div>
`;

exports[`Button component should match snapshot when loading 1`] = `
<div>
  <button
    class="css-of112l-Button"
    disabled=""
    type="button"
  >
    <span />
    <span
      class="css-1geq0g0"
    >
      <svg
        class="css-17e6min-Spinner"
        fill="none"
        role="img"
        stroke="currentColor"
        viewBox="0 0 32 32"
      >
        <title>
          Loading...
        </title>
        <circle
          cx="16"
          cy="16"
          opacity="0.125"
          r="12"
          stroke-width="4"
        />
        <circle
          class="css-1c39bx9-Spinner"
          cx="16"
          cy="16"
          r="12"
          stroke-dasharray="75.39822368615503"
          stroke-dashoffset="56.548667764616276"
          stroke-width="4"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when loading and showChildrenWhenLoading 1`] = `
<div>
  <button
    class="css-of112l-Button"
    disabled=""
    type="button"
  >
    <span>
      test
    </span>
    <span
      class="css-bq4wcj"
    >
      <svg
        class="css-17e6min-Spinner"
        fill="none"
        role="img"
        stroke="currentColor"
        viewBox="0 0 32 32"
      >
        <title>
          Loading...
        </title>
        <circle
          cx="16"
          cy="16"
          opacity="0.125"
          r="12"
          stroke-width="4"
        />
        <circle
          class="css-1c39bx9-Spinner"
          cx="16"
          cy="16"
          r="12"
          stroke-dasharray="75.39822368615503"
          stroke-dashoffset="56.548667764616276"
          stroke-width="4"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when openLinkInNewTab is true 1`] = `
<div>
  <a
    class="css-143r00j-Button"
    href="https://www.google.com.au"
    target="_blank"
  >
    <button
      class="css-1dvp56l-Button"
      type="button"
    >
      <span>
        test
      </span>
    </button>
  </a>
</div>
`;

exports[`Button component should match snapshot when size is sm 1`] = `
<div>
  <button
    class="css-12p2v62-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when variant is feature 1`] = `
<div>
  <button
    class="css-1ji57is-Button"
    type="button"
  >
    <span>
      feature
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when variant is outline 1`] = `
<div>
  <button
    class="css-71v8xj-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when variant is secondary 1`] = `
<div>
  <button
    class="css-1rknsk5-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;

exports[`Button component should match snapshot when variant is text 1`] = `
<div>
  <button
    class="css-1rknsk5-Button"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</div>
`;
